# thoughtful-ai-customer-support-agent

./: .env.example  .gitignore  DEPLOY_STREAMLIT.md  Dockerfile  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start-streamlit.sh
.windsurf/: architecture.md  project-context.md  tech-stack.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GIT_SETUP.md  README.md
scripts/: test_similarity.py
src/: __init__.py  config.py  main.py  models.py
src/agents/: __init__.py  general_agent.py  graph.py  rag_agent.py  router_agent.py  state.py
src/services/: llm_client.py  vector_store.py
src/utils/: logger.py  observability.py
tests/: __init__.py
